<resources>
    <string name="app_name">Skill_It_2021_09</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Skill It 2021 09</string>
    <string name="nav_header_subtitle">Anga Gergely</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_products">Products</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_cart">Cart</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="increment">+</string>
    <string name="decrement">—</string>
    <string name="starter_value">0</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_new">Add new</string>
    <string name="description">Description</string>
    <string name="purchasable">Purchasable</string>
    <string name="order">Order</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="home_text">I did my best, to finish this project in time.</string>
    <string name="plaintext">Plaintext</string>
    <string name="icon">Icon</string>
    <string name="product_name">Product name</string>
</resources>
