<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_menu_customer"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_product"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/menu_cart" />
    </group>
</menu>
