<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="horizontal">

    <Button
        android:id="@+id/decrement"
        android:layout_width="25sp"
        android:layout_height="40dp"
        android:background="@null"
        android:padding="0dp"
        android:text="@string/decrement"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/display"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/starter_value"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/increment"
        android:layout_width="25sp"
        android:layout_height="40dp"
        android:background="@null"
        android:padding="0dp"
        android:text="@string/increment"
        android:textSize="25sp" />

</LinearLayout>